syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb";

service AuthService {
    rpc UserSignUp (UserSignUpRequest) returns (UserSignUpResponse){}
    rpc UserLogin (UserLoginRequest) returns (UserLoginResponse){}
    rpc SendOtp (SendOtpRequest) returns (SendOtpResponse){}
    rpc VerifyOtp (VerifyOtpRequest) returns (VerifyOtpResponse){}
    rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse){}
    rpc ForgotPasswordVerifyAndChange (ForgotPasswordVerifyAndChangeRequest) returns (ForgotPasswordVerifyAndChangeResponse){}
    rpc UserDetails (UserDetailsRequest) returns (UserDetailsResponse){}
    rpc UpdateUserDetails (UpdateUserDetailsRequest) returns (UpdateUserDetailsResponse){}
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse){}
    rpc AdminLogin (AdminLoginRequest) returns (AdminLoginResponse){}
    rpc ShowAllUsers (ShowAllUsersRequest) returns (ShowAllUsersResponse){}
    rpc AdminBlockUser(AdminBlockUserRequest) returns (AdminBlockUserResponse) {}
    rpc AdminUnblockUser(AdminUnblockUserRequest) returns (AdminUnblockUserResponse) {}
    rpc CheckUserAvalilabilityWithUserID (CheckUserAvalilabilityWithUserIDRequest) returns (CheckUserAvalilabilityWithUserIDResponse){}
    rpc UserData (UserDataRequest) returns (UserDataResponse){}
    rpc CheckUserAvalilabilityWithTagUserID (CheckUserAvalilabilityWithTagUserIDRequest) returns (CheckUserAvalilabilityWithTagUserIDResponse){}
    rpc GetUserNameWithTagUserID (GetUserNameWithTagUserIDRequest) returns (GetUserNameWithTagUserIDResponse){}
    rpc ReportUser (ReportUserRequest) returns (ReportUserResponse){}
}

message UserSignUpRequest {
    string firstname = 1;
    string lastname = 2;
    string username = 3; 
    string phone = 4; 
    string email = 5;
    string password = 6;  
}

message UserProfile {
    bytes profile_photo = 1; 
}

message UserInfo {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string profile_photo = 4;
    bool isadmin = 5;
}

message UserResponse {
    UserInfo info = 1;
    string accesstoken = 2;
    string refreshtoken = 3;
}

message UserSignUpResponse {
    UserResponse reposnse = 1;
    string error = 2;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    UserResponse reposnse = 1;
    string error = 2;
}

message SendOtpRequest {
    string phone = 1;
}

message SendOtpResponse {
    string error = 1;
}

message OTPData {
     string phone = 1;
}

message VerifyOtp {
    OTPData user = 1;
    string code = 2;
}

message VerifyOtpRequest {
    VerifyOtp otpdata = 1;
}

message VerifyOtpResponse{
    UserResponse reposnse = 1;
    string error = 2;
}

message ForgotPasswordRequest {
    string phone = 1;
}

message ForgotPasswordResponse {
    string error = 2;
}

message ForgotVerify {
    string phone = 1;
    string otp = 2;
    string newpassword = 3;
}

message ForgotPasswordVerifyAndChangeRequest {
    ForgotVerify verify = 1;
}

message ForgotPasswordVerifyAndChangeResponse {
    string error = 1;
}

message UserDetailsRequest {
    int64 id = 1;
}
 
message UserData {
    string firstname = 1;
    string lastname = 2;
    string username = 3; 
    string dob = 4;
    string gender = 5;
    string phone = 6; 
    string email = 7;
    string bio = 8;      
    string profile_photo = 9; 
}

message UserDetailsResponse {
    UserData responsedata = 1;
    string error = 2;
}

message UserDataUpdate {
    string firstname = 1;
    string lastname = 2;
    string username = 3; 
    string dob = 4;
    string gender = 5;
    string phone = 6; 
    string email = 7;
    string bio = 8;      
    UserProfile profile_photo = 9; 
}

message UpdateUserDetailsRequest {
    UserDataUpdate userDetails = 1;
    int64 id = 2;
}

message UpdateUserDetailsResponse {
    UserData userDetails = 1;
    string error = 2; 
}

message ChangePassword {
    string oldpassword = 1;
    string password = 2;
    string repassword = 3;
}

message ChangePasswordRequest{
    int64 id = 1;
    ChangePassword password = 2;
}

message ChangePasswordResponse {
    string error = 1;
}

message AdminLoginRequest {
    string email = 1;
    string password = 2;
}

message AdminInfo {
    int64 id = 1;
    string email = 2;
    bytes profile_photo = 3;
    bool isadmin = 4;
}

message AdminResponse {
    AdminInfo info = 1;
    string accesstoken = 2;
    string refreshtoken = 3;
}

message AdminLoginResponse {
    AdminResponse reposnse = 1;
    string error = 2;
}

message ShowAllUsersRequest {
    int64 page = 1;
    int64 count = 2;
}

message Users{
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4; 
    string dob = 5;
    string gender = 6;
    string phone = 7; 
    string email = 8;
    string profile_photo = 9;
    google.protobuf.Timestamp created_at = 10;   
    bool blocked = 11;
}

message ShowAllUsersResponse {
    repeated Users UsersData = 1;
    string error = 2;
}

message AdminBlockUserRequest {
    int64 id = 1;
}

message AdminBlockUserResponse {
    string error = 1;
}
 
message AdminUnblockUserRequest {
    int64 id = 1;
}

message AdminUnblockUserResponse {
    string error = 1;
}

message CheckUserAvalilabilityWithUserIDRequest {
    int64 id = 1;
}

message CheckUserAvalilabilityWithUserIDResponse {
    bool valid = 1;
}

message UserDataRequest{
      int64 id = 1;
}

message UserDataResponse {
    int64 id = 1;
    string username = 2;
    string profile_photo = 3;
}


message  CheckUserAvalilabilityWithTagUserIDRequest {
    Tag tag = 1;
}
  
message Tag {
    repeated string user = 1;
}

message  CheckUserAvalilabilityWithTagUserIDResponse {
      bool valid = 1;
}

message GetUserNameWithTagUserIDRequest{
    Tag tag = 1;
}

message TagUsernames{
    string username =1;
}

message GetUserNameWithTagUserIDResponse{
    repeated TagUsernames name = 1;
}

message ReportUserRequest {
    int64 RepostedUserid = 1;
    int64  userid = 2;
    string Report = 3;
}

message  ReportUserResponse {}
